# learncodex

./: .env.production.template  .gitignore  AGENTS.md  AWS_DEPLOYMENT_GUIDE.md  DEPLOYMENT_CHECKLIST.md  PRODUCTION_DEPLOYMENT_GUIDE.md  QUICK_START_ALPHAFLUX.md  VERCEL_DEPLOYMENT_GUIDE.md  deploy-production.sh  docker-compose.yml  index.html  modifyOpenAIScript.mjs  package-lock.json  setup-dev.sh  verify-deployment-ready.sh
backend/: .env  (+10 more)
python-auto-trade/: .dockerignore  .env.example  .gitignore  Dockerfile  ENVIRONMENT.md  README.md  pyproject.toml  vercel.json
python-auto-trade/.vercel/: project.json
python-auto-trade/api/: index.py
python-auto-trade/config/: trading.yaml
python-auto-trade/docs/: CHAIN_OF_THOUGHT_LOGGING.md  DATA_FLOW_AND_STORAGE.md  EVALUATION_LOG_ENHANCEMENT.md  FRONTEND_INTEGRATION_PLAN.md  PHASE4_INTEGRATION_ANALYSIS.md  PHASE4_PROXY_VERIFICATION.md  QUICK_REFERENCE.md  QUICK_START_SIMULATION.md  SIMULATION_CHECKLIST.md  SIMULATION_DESIGN.md  SIMULATION_IMPLEMENTATION_SUMMARY.md  SIMULATION_README.md  TESTING_AND_DEPLOYMENT.md  TESTING_DEPLOYMENT_SUMMARY.md  simulation-execution-blueprint.md  simulation.env.example
python-auto-trade/logs/: runlog1.json  runlog2.json  runlog2_pretty.json  runlog3  runlog3_pretty.json  simulation_state.json  simulation_state_old.json  simulation_state_old2.json  test_export.csv  test_simulation_state.json
python-auto-trade/migrations/: 0004_add_feedback_loop_tables.sql  0005_create_runtime_settings.sql
python-auto-trade/scripts/: e2e_okx_demo.py  export_simulation.py  export_simulation_standalone.py  (+8 more)
(+563 files in other folders)
