[build-system]
requires = ["hatchling>=1.25.0"]
build-backend = "hatchling.build"

[project]
name = "autotrade-service"
version = "0.1.0"
description = "LLM-driven crypto auto trading service"
authors = [
  { name = "LearnCodex" }
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.114,<0.116",
  "uvicorn[standard]>=0.31,<0.32",
  "pydantic>=2.9,<3.0",
  "pydantic-settings>=2.4,<2.6",
  "asyncpg>=0.29,<0.30",
  "redis>=5.0,<6.0"
]

[project.optional-dependencies]
dev = [
  "httpx>=0.27,<0.28",
  "pytest>=8.3,<9.0",
  "pytest-asyncio>=0.24,<0.25",
  "ruff>=0.6.5",
  "mypy>=1.11.0"
]

[project.scripts]
autotrade-service = "autotrade_service.__main__:main"

[tool.hatch.build]
packages = ["src/autotrade_service"]

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-ra"
asyncio_mode = "auto"

[tool.ruff]
line-length = 100

[tool.mypy]
python_version = "3.11"
warn_unused_configs = true
warn_return_any = true
strict = false
